@@ -1,8 +1,9 @@
 homevent (0.2.6) gutsy; urgency=low
 
   * Onwards.
+  * Add a flag to force reporting Python stack traces
 
- -- Matthias Urlichs <matthias@urlichs.de>  Mon, 03 Dec 2007 06:49:40 +0100
+ -- Matthias Urlichs <smurf@debian.org>  Tue, 04 Dec 2007 19:13:11 +0100
 
 homevent (0.2.5.6) stable; urgency=low
 
